@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-11-04T01:47:23Z",
-  "count_outdated" : 1730,
-  "uniques_outdated" : 975,
+  "timestamp" : "2024-11-09T01:40:03Z",
+  "count_outdated" : 1731,
+  "uniques_outdated" : 976,
   "count" : 1734,
   "uniques" : 979,
   "clones" : [
-    {
-      "timestamp": "2024-10-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-28T00:00:00Z",
       "count": 1,
